--- a/medsev/assets/css/style.css
+++ b/medsev/assets/css/style.css
@@ -57,8 +57,12 @@ This files table contents are outlined below>>>>>
 
 /*-- Default CSS --*/
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     color: #4a6f8a;
     background-color: #ffffff;
     font-size: 15px;
@@ -71,10 +75,13 @@ h4,
 h5,
 h6 {
     color: #232323;
+    font-family: 'Montserrat', sans-serif;
 }
 
 p {
     line-height: 1.7;
+    /* font-family: 'Source Sans Pro', sans-serif; */
+
 }
 
 a {
@@ -221,6 +228,7 @@ button:focus {
     font-size: 12px;
     color: #666;
     margin-right: 25px;
+
 }
 
 .header-top-item .header-top-left ul li i {
@@ -395,6 +403,9 @@ button:focus {
     font-size: 15px;
     color: #282828;
     text-transform: capitalize;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+
 }
 
 .main-nav nav .navbar-nav .nav-item a:hover,
@@ -5325,3 +5336,10 @@ footer {
 
 
 /*# sourceMappingURL=style.css.map */
+
+
+/**** CSS by me ***********/
+.sub-heading {
+    font-family: 'Montserrat', sans-serif;
+
+}
